--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -9,6 +9,8 @@
 @import 'blocks/titles';
 @import 'blocks/services';
 @import 'blocks/relax';
+@import 'blocks/project';
+@import 'blocks/culture';
 
 *{
     font-family: 'Montserrat', sans-serif;
