--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,11 +11,19 @@
 @import 'blocks/relax';
 @import 'blocks/project';
 @import 'blocks/culture';
+@import 'blocks/clients';
+@import 'blocks/contact';
+@import 'blocks/logotipes';
+@import 'blocks/footer';
+@import 'blocks/footer-links';
+
 
 *{
     font-family: 'Montserrat', sans-serif;
 }
 .container{
-    width: 940px;
+    max-width: 940px;
     margin: 0 auto;
 }
+
+@import 'blocks/media';
