--- a/src/sass/blocks/_culture.scss
+++ b/src/sass/blocks/_culture.scss
@@ -41,7 +41,7 @@
             color: #222222;
             font-size: 18px;
             font-weight: 700;
-            text-align: left;
+            text-align: center;
             text-transform: uppercase;
             line-height: 18px;
         }
